add inline error message

--- a/app/templates/cookies/cookie_settings.html
+++ b/app/templates/cookies/cookie_settings.html
@@ -110,7 +110,9 @@
             "classes": "govuk-radios--inline",
             "fieldset": {
               "legend": {
-                "text": "Do you want to accept analytics cookies?",
+                "html": 'Do you want to accept analytics cookies?<span class="govuk-error-message dm-cookie-settings__error">
+                  <span class="govuk-visually-hidden">Error:</span> Please select \'Yes\' or \'No\'
+                  </span>',
                 "isPageHeading": false,
                 "classes": "govuk-fieldset__legend--m"
               }
