add link to error summary box (#261)
* add link to error summary box

* switch to error summary component

* change error wording

* remove unused font overrides

--- a/app/templates/cookies/cookie_settings.html
+++ b/app/templates/cookies/cookie_settings.html
@@ -21,12 +21,18 @@
 
 {% block mainContent %}
 
-  {{ dmAlert({
-    "type": "error",
-    "classes": "dm-cookie-settings__error",
+  {{ govukErrorSummary({
     "titleText": "There was a problem saving your settings",
-    "text": "Please select 'Yes' or 'No'.",
-    "attributes": [("id", "dm-cookie-settings-error")]
+    "classes": "dm-cookie-settings__error",
+     "attributes": {
+      "id": "dm-cookie-settings-error"
+    },
+    "errorList": [
+      {
+        "text": "Select yes to accept analytics cookies",
+        "href": "#dm-cookie-settings"
+      }
+    ]
   }) }}
 
   {{ dmAlert({
