Remove HTML5 validation from User FE forms

--- a/app/templates/auth/change-password.html
+++ b/app/templates/auth/change-password.html
@@ -24,7 +24,7 @@
 
   <h1 class="govuk-heading-xl">Change your password</h1>
 
-  <form action="{{ url_for('.change_password') }}" method="POST">
+  <form action="{{ url_for('.change_password') }}" method="POST" novalidate>
     <div class="govuk-grid-row">
       <div class="govuk-grid-column-two-thirds">
         {{ form.hidden_tag() }}
