--- a/app/templates/auth/request-password-reset.html
+++ b/app/templates/auth/request-password-reset.html
@@ -28,7 +28,7 @@
     password. Password reset links are only valid for 24 hours.
   </p>
 
-  <form action="{{ url_for('.request_password_reset') }}" method="POST" id="resetPasswordForm">
+  <form action="{{ url_for('.request_password_reset') }}" method="POST" id="resetPasswordForm" novalidate>
     <div class="govuk-grid-row">
       <div class="govuk-grid-column-two-thirds">
         {{ form.hidden_tag() }}
