--- a/app/templates/auth/reset-password.html
+++ b/app/templates/auth/reset-password.html
@@ -24,7 +24,7 @@
     Reset password for {{ email_address }}
   </p>
 
-  <form action="{{ url_for('.update_password', token=token) }}" method="POST">
+  <form action="{{ url_for('.update_password', token=token) }}" method="POST" novalidate>
     <div class="govuk-grid-row">
       <div class="govuk-grid-column-two-thirds">
         {{ form.hidden_tag() }}
