--- a/app/templates/cookies/cookie_settings.html
+++ b/app/templates/cookies/cookie_settings.html
@@ -105,7 +105,7 @@
             <li>what you click on while you&rsquo;re using the service</li>
           </ul>
 
-        <form id="dm-cookie-settings" data-module="dm-cookie-settings">
+        <form id="dm-cookie-settings" data-module="dm-cookie-settings" novalidate>
           {{ govukRadios({
             "name": "cookies-analytics",
             "idPrefix": "cookie-settings",
