--- a/app/templates/auth/login.html
+++ b/app/templates/auth/login.html
@@ -19,7 +19,7 @@
 {% block mainContent %}
   <h1 class="govuk-heading-xl">Log in to the Digital Marketplace</h1>
 
-  <form action="{{ url_for('.process_login', next=next) }}" method="POST">
+  <form action="{{ url_for('.process_login', next=next) }}" method="POST" novalidate>
     <div class="govuk-grid-row">
       <div class="govuk-grid-column-two-thirds">
         {{ form.hidden_tag() }}
