--- a/app/templates/notifications/user-research-consent.html
+++ b/app/templates/notifications/user-research-consent.html
@@ -51,7 +51,7 @@
         </p>
       {% endif %}
 
-      <form action="{{ url_for('main.user_research_consent') }}" method="POST">
+      <form action="{{ url_for('main.user_research_consent') }}" method="POST" novalidate>
         <input type="hidden" name="csrf_token" value="{{ csrf_token() }}" />
         {%
           with
