Fix typo in flash message logic

--- a/app/templates/_base_page.html
+++ b/app/templates/_base_page.html
@@ -56,7 +56,7 @@
     %}
       {% for category, message in messages %}
         {{ dmAlert({
-          "titleHtml": titles.get("category") or message,
+          "titleHtml": titles.get(category) or message,
           "html": message if category in titles else None,
           "type": category,
         }) }}
