Replace selection-buttons with govukCheckboxes
Adjusting specificity of the govuk-label override enables us to avoid
introducing more overrides for checkboxes and radios.

--- a/app/assets/scss/overrides/_govuk-label.scss
+++ b/app/assets/scss/overrides/_govuk-label.scss
@@ -3,18 +3,17 @@
 // medium heading. This style was copied from
 // https://github.com/alphagov/govuk-frontend/blob/v2.13.0/src/components/label/_label.scss#L27-L30
 //
+// In addition, we do NOT want to apply this override to checkboxes and radios, since their labels
+// are styled correctly. So we target the first child of a govuk-form-group, since govukInput
+// components place the label immediately after the container.
+//
 // TODO: Remove/move this to digitalmarketplace-govuk-frontend when ready
 
-.govuk-label {
+.govuk-form-group .govuk-label:first-child {
   @include govuk-text-colour;
   @include govuk-font($size: 24, $weight: bold);
 
   display: block;
 
   margin-bottom: govuk-spacing(2);
-}
-
-// Cookie settings form labels use the govuk-frontend govukRadios component, so we can keep the original styling
-form#dm-cookie-settings .govuk-label {
-  @include govuk-font($size: 19);
 }
