--- a/app/templates/_base_page.html
+++ b/app/templates/_base_page.html
@@ -6,6 +6,7 @@
 {% from "govuk-frontend/components/button/macro.njk" import govukButton %}
 {% from "govuk-frontend/components/error-summary/macro.njk" import govukErrorSummary %}
 {% from "govuk-frontend/components/input/macro.njk" import govukInput %}
+{% from "govuk-frontend/components/checkboxes/macro.njk" import govukCheckboxes %}
 {% from "govuk-frontend/components/phase-banner/macro.njk" import govukPhaseBanner %}
 {% from "govuk-frontend/components/radios/macro.njk" import govukRadios %}
 
