Fix typo on User research mailing list title

--- a/app/templates/notifications/user-research-consent.html
+++ b/app/templates/notifications/user-research-consent.html
@@ -1,7 +1,7 @@
 {% extends "_base_page.html" %}
 
 {% block pageTitle %}
-  User reserch notification – Digital Marketplace
+  User research notification – Digital Marketplace
 {% endblock %}
 
 {% block breadcrumb %}
