--- a/app/assets/scss/application.scss
+++ b/app/assets/scss/application.scss
@@ -1,27 +1,8 @@
-
-// Digital Marketplace Front-end toolkit shared CSS placeholders used by other DM toolkit styles
-@import "toolkit/shared_placeholders/_temporary-messages.scss";
-@import "toolkit/shared_placeholders/_placeholders.scss";
-@import "toolkit/shared_placeholders/_dm-typography.scss";
-@import "toolkit/shared_placeholders/_mixins.scss";
-
-
-// Digital Marketplace Front-end toolkit styles (only import the files you need)
-@import "toolkit/_notification-banners.scss";
-@import "toolkit/_proposition-header.scss";
-@import "toolkit/forms/_hint.scss";
-@import "toolkit/forms/_questions.scss";
-@import "toolkit/forms/_textboxes.scss";
-@import "toolkit/forms/_selection-buttons.scss";
-
-
-// GOV.UK Design System (compatible with old toolkit/elements)
+// GOV.UK Design System
 $govuk-assets-path: '/user/static/';
 $govuk-images-path: '/user/static/images/';
 $govuk-fonts-path: '/user/static/fonts/';
-$govuk-compatibility-govukfrontendtoolkit: true;
-$govuk-compatibility-govukelements: true;
-@import "node_modules/digitalmarketplace-govuk-frontend/govuk-frontend/all";
+@import "node_modules/digitalmarketplace-govuk-frontend/govuk-frontend/govuk/all";
 
 // Digital Marketplace Components
 @import "node_modules/digitalmarketplace-govuk-frontend/digitalmarketplace/all";
