Update paths to govuk-frontend-jinja templates

--- a/app/templates/_base_page.html
+++ b/app/templates/_base_page.html
@@ -1,13 +1,13 @@
-{% extends "govuk-frontend/template.njk" %}
+{% extends "govuk-frontend/template.html" %}
 
 // Insert line for each component module import
 
-{% from "govuk-frontend/components/breadcrumbs/macro.njk" import govukBreadcrumbs %}
-{% from "govuk-frontend/components/button/macro.njk" import govukButton %}
-{% from "govuk-frontend/components/error-summary/macro.njk" import govukErrorSummary %}
-{% from "govuk-frontend/components/input/macro.njk" import govukInput %}
-{% from "govuk-frontend/components/phase-banner/macro.njk" import govukPhaseBanner %}
-{% from "govuk-frontend/components/radios/macro.njk" import govukRadios %}
+{% from "govuk-frontend/components/breadcrumbs/macro.html" import govukBreadcrumbs %}
+{% from "govuk-frontend/components/button/macro.html" import govukButton %}
+{% from "govuk-frontend/components/error-summary/macro.html" import govukErrorSummary %}
+{% from "govuk-frontend/components/input/macro.html" import govukInput %}
+{% from "govuk-frontend/components/phase-banner/macro.html" import govukPhaseBanner %}
+{% from "govuk-frontend/components/radios/macro.html" import govukRadios %}
 
 
 {# Import DM Components #}
