Adjust link spacing and remove block links
Conforming these links to GOVUK FE style - we don't
want the entire width of the column to be highlighted
when we click links.

--- a/app/templates/auth/change-password.html
+++ b/app/templates/auth/change-password.html
@@ -78,5 +78,7 @@
       </div>
     </div>
   </form>
-<a class="govuk-link govuk-!-margin-top-3 govuk-!-display-block" href="{{ dashboard_url }}">Return to your account</a>
+  <p class="govuk-body">
+    <a class="govuk-link" href="{{ dashboard_url }}">Return to your account</a>
+  </p>
 {% endblock %}
