--- a/app/templates/notifications/user-research-consent.html
+++ b/app/templates/notifications/user-research-consent.html
@@ -77,10 +77,7 @@
           },
         }) }}
       </form>
-
-      <a class="govuk-link govuk-!-margin-top-3 govuk-!-display-inline-block" href="{{ dashboard_url }}">
-        Return to your account
-      </a>
+      <p class="govuk-body"><a class="govuk-link" href="{{ dashboard_url }}">Return to your account</a></p>
     </div>
 
   </div>
