Update dmAlert attributes property to use a dict

--- a/app/templates/cookies/cookie_settings.html
+++ b/app/templates/cookies/cookie_settings.html
@@ -40,7 +40,7 @@
     "classes": "dm-cookie-settings__confirmation",
     "titleText": "Your cookie settings were saved",
     "html": '<p class="govuk-body">You can change your preferences at any time on this page.</p><p class="govuk-body"><a href="/" class="govuk-link dm-cookie-settings__prev-page">Go back to the page you were looking at.</a></p>',
-    "attributes": [("id", "dm-cookie-settings-confirmation")]
+    "attributes": {"id": "dm-cookie-settings-confirmation"}
   }) }}
 
   {{ dmAlert({
@@ -48,7 +48,7 @@
     "classes": "dm-cookie-settings__warning",
     "titleText": "Your cookie settings have not yet been saved",
     "text": 'Digital Marketplace sets cookies when you visit our website. You can choose to change these settings to your own preferences. You need to save this page with your new choices.',
-    "attributes": [("id", "dm-cookie-settings-warning")]
+    "attributes": {"id": "dm-cookie-settings-warning"}
   }) }}
 
   <h1 class="govuk-heading-xl">Change your cookie settings</h1>
