Add error summary description text
We want to provide more context on the error, but don't want a gigantic multi-sentence link. Will have no effect on other errors, where we don't provide the description.

--- a/app/templates/_base_page.html
+++ b/app/templates/_base_page.html
@@ -68,6 +68,7 @@
     {% if errors %}
       {{ govukErrorSummary({
       "titleText": "There is a problem",
+      "descriptionText": error_summary_description_text,
       "errorList": errors.values(),
     }) }}
     {% endif %}
