Add active path to Header

--- a/app/templates/_base_page.html
+++ b/app/templates/_base_page.html
@@ -34,7 +34,8 @@
     }) }}
   {% endblock %}
   {{ dmHeader({
-    "role": current_user.role | default(None)
+    "role": current_user.role | default(None),
+    "active": request.path
   }) }}
 {% endblock %}
 
